--- a/css/contacto.css
+++ b/css/contacto.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    background: url(/Entregas/DexSaves/images/DnDWallpaperPHB.jpg);
+    background: url(../images/DnDWallpaperPHB.jpg);
     background-attachment: fixed;
     background-size: cover;
     margin: 0%;
