--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* CSS para todas las páginas */
 body {
-    background: url(/Entregas/DexSaves/images/DnDWallpaperPHB.jpg);
+    background: url(../images/DnDWallpaperPHB.jpg);
     background-attachment: fixed;
     background-size: cover;
     height: 200%;
