--- a/css/shop.css
+++ b/css/shop.css
@@ -417,7 +417,7 @@ ul li:hover ul {
     .titulo__pagina {
         display: flex;
         border: 1px solid antiquewhite;
-        background: url(images/DnDIcon.jpg);
+        background: url(../images/DnDIcon.jpg);
         background-size: cover;
         font-size: larger;
         width: 15%;
