--- a/css/contacto.css
+++ b/css/contacto.css
@@ -62,45 +62,28 @@ nav {
     margin: 0;
 }
 
-ul {
-    list-style: none;
-}
-
-li {
-    display: inline-block;
-    border: 3px double rgb(121, 4, 4);
-    width: 15%;
-    position: relative;
+.nav__item {
+    text-decoration: none;
+    text-align: center;
     font-size: 30px;
     font-family: 'Amatic SC', cursive;
+    color: antiquewhite;
+    width: 15%;
     background-color: maroon;
-    padding: 5px;
+    border: antiquewhite 2px solid;
 }
 
-li a {
+.nav__item:hover {
+    transform: scale(1.1);
+    background-color: rgb(54, 0, 0);
+}
+
+.nav__item a {
     text-decoration: none;
     color: antiquewhite;
+
 }
 
-ul ul {
-    position: absolute;
-    display: none;
-    width: 100%;
-    margin-top: 5px;
-    margin-left: -50px;
-}
-
-ul ul li {
-    border: 2px double rgb(121, 4, 4);
-    display: block;
-    width: 100%;
-    background-color: rgb(122, 11, 11);
-}
-
-ul li:hover ul {
-    display: block;
-    z-index: 2;
-}
 
 .new_footer {
     display: flex;
@@ -112,28 +95,11 @@ ul li:hover ul {
 }
 
 .nav__grid {
+    display: flex;
     justify-content: space-around;
     align-content: center;
 }
 
-.nav__grid ul {
-    text-align: center;
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: stretch;
-    justify-content: center;
-}
-
-.nav__grid ul li a {
-    text-decoration: none;
-    color: antiquewhite;
-}
-
-.nav__grid ul ul {
-    display: none;
-}
 
 main {
     background-color: rgb(54, 0, 0);
@@ -150,7 +116,7 @@ main {
 
 
 .newsletter {
-    flex: 1;
+    flex: 0.5;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -158,7 +124,7 @@ main {
 }
 
 .socials {
-    flex: 1;
+    flex: 0.5;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -230,29 +196,6 @@ main {
         align-content: center;
     }
 
-    .nav__grid ul {
-        text-align: center;
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: space-around;
-    }
-
-    li a {
-        margin: 10px;
-        font-size: 16px;
-        text-decoration: none;
-        color: antiquewhite;
-    }
-
-    .list {
-        margin: 0%;
-        padding: 0%;
-        display: flex;
-        justify-content: space-evenly;
-    }
-
 
     .main {
         width: auto;
@@ -267,6 +210,7 @@ main {
     }
 
     .newsletter {
+        height: 50%;
         flex: 0.5;
         display: flex;
         justify-content: center;
@@ -285,5 +229,11 @@ main {
     .redes {
         display: flex;
         flex-direction: column;
+    }
+
+    .nav__item {
+        width: 20%;
+        font-size: 16px;
+        margin: 5px;
     }
 }
