--- a/css/style.css
+++ b/css/style.css
@@ -20,46 +20,27 @@ body {
     margin: 0;
 }
 
-ul {
-    list-style: none;
-}
-
-li {
-    display: inline-block;
-    border: 3px double rgb(121, 4, 4);
-    width: 15%;
-    position: relative;
+.nav__item {
+    text-decoration: none;
+    text-align: center;
     font-size: 30px;
     font-family: 'Amatic SC', cursive;
+    color: antiquewhite;
+    width: 15%;
     background-color: maroon;
-    padding: 5px;
+    border: antiquewhite 2px solid;
 }
 
-li a {
+.nav__item:hover {
+    transform: scale(1.1);
+    background-color: rgb(54, 0, 0);
+}
+
+.nav__item a {
     text-decoration: none;
     color: antiquewhite;
-}
 
-ul ul {
-    position: absolute;
-    display: none;
-    width: 100%;
-    margin-top: 5px;
-    margin-left: -50px;
 }
-
-ul ul li {
-    border: 2px double rgb(121, 4, 4);
-    display: block;
-    width: 100%;
-    background-color: rgb(122, 11, 11);
-}
-
-ul li:hover ul {
-    display: block;
-    z-index: 2;
-}
-
 
 /* Acá empieza el CSS del contenido del Index */
 
@@ -110,7 +91,7 @@ header {
 }
 
 nav {
-    display: grid;
+    display: flex;
     grid-template-columns: 5fr;
     justify-content: space-around;
     align-items: center;
@@ -161,27 +142,11 @@ nav {
 }
 
 .nav__grid {
-    justify-content: space-around;
-    align-content: center;
-}
-
-.nav__grid ul {
-    text-align: center;
-    list-style: none;
+    justify-self: center;
+    width: 85%;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: stretch;
-    justify-content: center;
-}
-
-.nav__grid ul li a {
-    text-decoration: none;
-    color: antiquewhite;
-}
-
-.nav__grid ul ul {
-    display: none;
+    justify-content: space-evenly;
+    align-content: center;
 }
 
 @media screen and (max-width: 420px) {
@@ -246,25 +211,12 @@ nav {
     }
 
     .nav__grid ul {
+        width: 100%;
         text-align: center;
         list-style: none;
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        justify-content: space-around;
-    }
-
-    li a {
-        margin: 10px;
-        font-size: 16px;
-        text-decoration: none;
-        color: antiquewhite;
-    }
-
-    .list {
-        margin: 0%;
-        padding: 0%;
-        display: flex;
         justify-content: space-evenly;
     }
 
@@ -307,5 +259,11 @@ nav {
         font-family: 'Raleway', sans-serif;
         font-weight: 700;
         color: antiquewhite;
+    }
+
+    .nav__item {
+        width: 20%;
+        font-size: 16px;
+        margin: 5px;
     }
 }
