--- a/css/contacto.css
+++ b/css/contacto.css
@@ -76,12 +76,21 @@ nav {
 .nav__item:hover {
     transform: scale(1.1);
     background-color: rgb(54, 0, 0);
+    transition-duration: 300ms;
+}
+
+.footer__icon {
+    color: antiquewhite;
+}
+
+.footer__icon img:hover {
+    transform: scale(1.25);
+    transition-duration: 300ms;
 }
 
 .nav__item a {
     text-decoration: none;
     color: antiquewhite;
-
 }
 
 
